# SPDX-License-Identifier: PolyForm-Noncommercial-1.0.0
# Required Notice: Copyright (c) 2025 AI Chat Team

[package]
name = "user_service_backend"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
axum = { version = "0.7", features = ["json", "macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
futures-util = "0.3"
jsonwebtoken = "9"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
once_cell = "1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }
