# SPDX-License-Identifier: PolyForm-Noncommercial-1.0.0
# Required Notice: Copyright (c) 2025 AI Chat Team

[package]
name = "user_service_backend"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
aes-gcm = "0.11"
argon2 = "0.5"
axum = { version = "0.8", features = ["json", "macros"] }
base64 = "0.22"
chatos_service_runtime = { path = "../../crates/chatos_service_runtime" }
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
futures-util = "0.3"
hex = "0.4"
jsonwebtoken = "10"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-native-tls"] }
mongodb = { version = "2.8", features = ["tokio-runtime"] }
once_cell = "1"
rand = "0.9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }
